Fixes mobile menu on iPhone
The mobile menu button close was not properly displayed and positioned on iPhone.

--- a/style/less/responsive.less
+++ b/style/less/responsive.less
@@ -192,7 +192,7 @@
 					.transition(width 1.4s 250ms @cubic);
 				}
 
-				& > li {
+				& > ul {
 					opacity: 1;
 					.transition(opacity 800ms 800ms ease);
 				}
@@ -282,36 +282,32 @@
 			.transition(width 1.1s 600ms @cubic);
 		}
 
-		& > li:not(:last-child) {
+		& > ul {
 			opacity: 0;
 			.transition(opacity 500ms 250ms ease);
 
-			&.active::before {
-				content: '';
-				display: block;
-				position: absolute;
-				left: -25px;
-				top: 48%;
-				width: 10px;
-				height: 10px;
-				background: @vibrant-color;
-				.border-radius(100%);
-			}
+			& > li:not(:last-child) {
+				&.active::before {
+					content: '';
+					display: block;
+					position: absolute;
+					left: -25px;
+					top: 48%;
+					width: 10px;
+					height: 10px;
+					background: @vibrant-color;
+					.border-radius(100%);
+				}
 
-			&.out::before {
-				.transform(scale(0));
-				.transition(transform 500ms ease);
-			}
+				&.out::before {
+					.transform(scale(0));
+					.transition(transform 500ms ease);
+				}
 
-			&.in::before {
-				.animation(activate 500ms @cubic forwards);
+				&.in::before {
+					.animation(activate 500ms @cubic forwards);
+				}
 			}
-		}
-
-		ul {
-			flex-direction: row;
-			display: flex;
-			margin: 0;
 		}
 
 		li {
@@ -320,6 +316,12 @@
 			line-height: 14vh;
 			font-size: 40px;
 			.no-highlight();
+
+			ul {
+				flex-direction: row;
+				display: flex;
+				margin: 0;
+			}
 		}
 
 		.lang {
@@ -356,7 +358,7 @@
 	}
 
 	.menu-button-close {
-		position: fixed;
+		position: absolute;
 		top: 44px;
 		right: 30px;
 		width: 34px;
